fixed issue for overlapping main and sub menus on small devices

--- a/app/styles/main-foundation.css
+++ b/app/styles/main-foundation.css
@@ -469,6 +469,9 @@ td.right-border{
 	padding: 5px;
 	display: inline-block;
 }
+.top-bar{
+  z-index: 11 !important;
+}
 .top-bar .toggle-topbar.menu-icon a::after{
   -webkit-box-shadow: 0 10px 0 1px black, 0 16px 0 1px black, 0 22px 0 1px black;
   box-shadow: 0 10px 0 1px black, 0 16px 0 1px black, 0 22px 0 1px black;
